Add LengthRule, addError method in RuleResult